Fixed jumpy form elements when focusing on an input

--- a/admin/broadleaf-open-admin-platform/src/main/java/org/broadleafcommerce/openadmin/theme/broadleaf/public/sc/skins/Broadleaf/less/skin_styles.less
+++ b/admin/broadleaf-open-admin-platform/src/main/java/org/broadleafcommerce/openadmin/theme/broadleaf/public/sc/skins/Broadleaf/less/skin_styles.less
@@ -624,7 +624,8 @@ Button (also used as MenuButton base style)
 }
 
 .formTitle,
-.formTitleDisabled {
+.formTitleDisabled,
+.formTitleFocused {
     padding-left: 25px;
 }
 
